--- a/prayerbook/trans_cn.plist
+++ b/prayerbook/trans_cn.plist
@@ -13,6 +13,6 @@
 	<key>Options</key>
 	<string>设置</string>
 	<key>Prayerbook</key>
-	<string>东正教祈祷书</string>
+	<string>正教祈祷书</string>
 </dict>
 </plist>
