--- a/prayerbook/index_cn.plist
+++ b/prayerbook/index_cn.plist
@@ -2,26 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>index</key>
+	<key>daily</key>
 	<array>
-		<array>
-			<string>晨起祈祷</string>
-			<string>寝前祈祷</string>
-			<string>日间祈祷</string>
-		</array>
-		<array>
-			<string>向我主耶稣基督忏悔的颂典</string>
-			<string>向至圣诞神女的圣颂典</string>
-			<string>向神圣护守天使的圣颂典</string>
-			<string>预备领圣体血礼仪</string>
-			<string>圣金口若望事奉圣礼</string>
-			<string>领圣体圣血后的谢恩经</string>
-		</array>
-		<array>
-			<string>独自诵念圣颂典和弗坐词仪轨</string>
-			<string>向我们的主耶稣基督的圣颂典</string>
-			<string>耶稣圣名弗坐词</string>
-		</array>
+		<string>晨起祈祷</string>
+		<string>寝前祈祷</string>
+		<string>日间祈祷</string>
+	</array>
+	<key>communion</key>
+	<array>
+		<string>向我主耶稣基督忏悔的颂典</string>
+		<string>向至圣诞神女的圣颂典</string>
+		<string>向神圣护守天使的圣颂典</string>
+		<string>预备领圣体血礼仪</string>
+		<string>圣金口若望事奉圣礼</string>
+		<string>领圣体圣血后的谢恩经</string>
+	</array>
+	<key>group</key>
+	<array>
+		<string>独自诵念圣颂典和弗坐词仪轨</string>
+		<string>向我们的主耶稣基督的圣颂典</string>
+		<string>耶稣圣名弗坐词</string>
 	</array>
 </dict>
 </plist>
