Added new services

--- a/prayerbook/index_cn.plist
+++ b/prayerbook/index_cn.plist
@@ -19,6 +19,11 @@
 	</array>
 	<key>group</key>
 	<array>
+		<string>感恩儀軌
+感恩儀軌
+感恩儀軌
+感恩儀軌</string>
+		<string>代圣体血礼仪</string>
 		<string>独自诵念圣颂典和弗坐词仪轨</string>
 		<string>向我们的主耶稣基督的圣颂典</string>
 		<string>耶稣圣名弗坐词</string>
