--- a/prayerbook/index_en.plist
+++ b/prayerbook/index_en.plist
@@ -19,6 +19,8 @@
 	</array>
 	<key>group</key>
 	<array>
+		<string>Typica</string>
+		<string>Thanksgiving Prayer Service</string>
 		<string>The order of reading Canons and Akathists when alone</string>
 		<string>Canon To our Lord Jesus Christ</string>
 		<string>Akathist to our Sweetest Lord Jesus Christ</string>
