--- a/prayerbook/trans_cn.plist
+++ b/prayerbook/trans_cn.plist
@@ -2,6 +2,36 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Trinity Week</key>
+	<string>圣三一周</string>
+	<key>Bright Week</key>
+	<string>光明周</string>
+	<key>Svyatki</key>
+	<string>圣诞节期周</string>
+	<key>Dormition Fast</key>
+	<string>圣母安息斋期</string>
+	<key>Apostoles&apos; Fast</key>
+	<string>使徒斋期</string>
+	<key>Great Lent</key>
+	<string>大斋期</string>
+	<key>Nativity Fast</key>
+	<string>圣诞斋期</string>
+	<key>Fast day</key>
+	<string>教会斋日
+教会斋日
+教会斋日</string>
+	<key>Passion Week</key>
+	<string>受难周</string>
+	<key>Maslenitsa</key>
+	<string>谢肉节</string>
+	<key>No fast</key>
+	<string>无斋</string>
+	<key>Fast-free week</key>
+	<string>免斋周</string>
+	<key>Fish allowed</key>
+	<string>鱼可食</string>
+	<key>Vegetarian</key>
+	<string>果蔬</string>
 	<key>Tone %@</key>
 	<string>第%@调式</string>
 	<key>Sunday %d after Pentecost</key>
