Improvements in ChurchCalendar

--- a/prayerbook/ChurchCalendar.plist
+++ b/prayerbook/ChurchCalendar.plist
@@ -266,5 +266,17 @@
         <key>cn</key>
         <string></string>
     </dict>
+    <dict>
+        <key>en</key>
+        <string></string>
+        <key>cn</key>
+        <string></string>
+    </dict>
+    <dict>
+        <key>en</key>
+        <string></string>
+        <key>cn</key>
+        <string></string>
+    </dict>
 </array>
 </plist>
