--- a/prayerbook/trans_cn.plist
+++ b/prayerbook/trans_cn.plist
@@ -23,7 +23,7 @@
 	<key>Passion Week</key>
 	<string>受难周</string>
 	<key>Maslenitsa</key>
-	<string>谢肉节</string>
+	<string>离肉周</string>
 	<key>No fast</key>
 	<string>无斋</string>
 	<key>Fast-free week</key>
