--- a/prayerbook/ChurchCalendar.plist
+++ b/prayerbook/ChurchCalendar.plist
@@ -362,7 +362,14 @@
 		<key>cn</key>
 		<string>主显节后主日</string>
 	</dict>
-	<dict>
+    <dict>
+        <key>en</key>
+        <string></string>
+        <key>cn</key>
+        <string></string>
+    </dict>
+
+<dict>
 		<key>en</key>
 		<string></string>
 		<key>cn</key>
