--- a/prayerbook/trans_ui_cn.plist
+++ b/prayerbook/trans_ui_cn.plist
@@ -2,6 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>The order of reading Canons and Akathists when alone</key>
+	<string>独自诵念圣颂典和弗坐词仪轨</string>
+	<key>Akathist to our Sweetest Lord Jesus Christ</key>
+	<string>耶稣圣名弗坐词</string>
+	<key>Canon To our Lord Jesus Christ</key>
+	<string>向我们的主耶稣基督的圣颂典</string>
+	<key>Thanksgiving Prayer Service</key>
+	<string>代圣体血礼仪</string>
+	<key>Typica</key>
+	<string>感恩儀軌
+感恩儀軌
+感恩儀軌
+感恩儀軌</string>
+	<key>Thanksgiving after Holy Communion</key>
+	<string>领圣体圣血后的谢恩经</string>
+	<key>The Divine Liturgy of St John Chrysostom</key>
+	<string>圣金口若望事奉圣礼</string>
+	<key>Order of Pre-communion prayers</key>
+	<string>预备领圣体血礼仪</string>
+	<key>Canon To the Guardian Angel</key>
+	<string>向神圣护守天使的圣颂典</string>
+	<key>Canon To the Most Holy Mother of God</key>
+	<string>向至圣诞神女的圣颂典</string>
+	<key>A Canon of Repentance to our Lord Jesus Christ</key>
+	<string>向我主耶稣基督忏悔的颂典</string>
+	<key>Prayers during the day</key>
+	<string>日间祈祷</string>
+	<key>Prayers before Sleep</key>
+	<string>寝前祈祷</string>
+	<key>Morning Prayers</key>
+	<string>晨起祈祷</string>
 	<key>Trinity Week</key>
 	<string>圣三一周</string>
 	<key>Bright Week</key>
