--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -2,6 +2,28 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Vegetarian</key>
+	<string>果蔬</string>
+	<key>Fish allowed</key>
+	<string>鱼可食</string>
+	<key>Fast-free week</key>
+	<string>免斋周</string>
+	<key>No fast</key>
+	<string>无斋</string>
+	<key>Maslenitsa</key>
+	<string>离肉周</string>
+	<key>Fast day</key>
+	<string>教会斋日</string>
+	<key>Nativity Fast</key>
+	<string>圣诞斋期</string>
+	<key>Great Lent</key>
+	<string>大斋期</string>
+	<key>Apostoles&apos; Fast</key>
+	<string>使徒斋期</string>
+	<key>Dormition Fast</key>
+	<string>圣母安息斋期</string>
+	<key>Svyatki</key>
+	<string>圣诞节期周</string>
 	<key>Saturday of Palms (Lazarus Saturday)</key>
 	<string>圣枝安息日（拉匝若复生之安息日）</string>
 	<key>Seventh Sunday after Pascha. Commemoration of the 318 Holy Fathers of the First Ecumenical Council (325)</key>
