More Chinese translations.

--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -2,6 +2,48 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>All Saints who have shown forth in the land of Russia</key>
+	<string>俄罗斯全体圣徒</string>
+	<key>Icons of the Mother of God: “the Softener of evil hearts” and “the Indestructible Wall”</key>
+	<string>“软化邪恶之心者”及 “不可摧毁之壁垒”圣母像纪念日</string>
+	<key>Feast of All Saints</key>
+	<string>诸圣主日</string>
+	<key>Apodosis of Pentecost</key>
+	<string>五旬节庆期圆满日</string>
+	<key>Icon of the Mother of God “Surety of Sinners” in Korets (1622)</key>
+	<string> 至圣诞神女“罪人之保”圣像（柯列茨卡娅，1622年）</string>
+	<key>Icons of the Mother of God “Tupichevsk” (1847) and “Cypriot” (392)</key>
+	<string>塞浦路斯圣母像纪念日（392年）</string>
+	<key>Day of the Holy Spirit</key>
+	<string>上帝圣灵日</string>
+	<key>Trinity Saturday; Commemoration of the Departed</key>
+	<string>纪念亡者</string>
+	<key>Chelnskoy and Pskov-Kiev Caves called “Tenderness” icons of the Mother of God</key>
+	<string>琴斯托霍瓦及普斯科夫的“邬弥勒涅”圣母像纪念日</string>
+	<key>Apodosis of the Ascension</key>
+	<string>主升天节庆期圆满日</string>
+	<key>Afterfeast of the Ascension</key>
+	<string>主升天节庆期</string>
+	<key>Apodosis of Pascha</key>
+	<string>葩斯哈庆期圆满日</string>
+	<key>Synaxis of New Martyrs of Butovo</key>
+	<string>纪念布托沃地方全体新殉道者（莫斯科市西南区，1930年代）</string>
+	<key>Mozdok and Dubensky-Krasnohorská (17th C) Icons of the Mother of God</key>
+	<string>“莫兹多克”和“杜本斯基•克拉斯诺霍”圣母像纪念日（17世纪）</string>
+	<key>Mid-Pentecost</key>
+	<string>五旬中节</string>
+	<key>Righteous Tabitha of Joppa (1st C)</key>
+	<string>圣妇塔维塔（圣使徒裴特若所复活之寡妇，1世纪）</string>
+	<key>Holy Martyr Abraham the Bulgar, Wonderworker of Vladimir († 1229)</key>
+	<string>殉道者阿弗拉穆（保加利亚，1229年）</string>
+	<key>Right-believing Tamara, Queen of Georgia († 1213)</key>
+	<string>圣妇塔玛拉（格鲁吉亚之王后，1213年）</string>
+	<key>St Joseph of Arimathea, and Nicodemus</key>
+	<string>St Joseph of Arimathea, and Nicodemus</string>
+	<key>Radonitsa (Day of Rejoycing)</key>
+	<string>Radonitsa (Day of Rejoycing)</string>
+	<key>Feast of the Life-Giving Spring of the Mother of God</key>
+	<string>Feast of the Life-Giving Spring of the Mother of God</string>
 	<key>Venerable Mary of Egypt</key>
 	<string>埃及的大成德者圣女玛利亚</string>
 	<key>Saturday of the Akathist; Laudation of the Most Holy Theotokos</key>
