Updated translations and added copyright info

--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -73,11 +73,11 @@
 	<key>Right-believing Tamara, Queen of Georgia († 1213)</key>
 	<string>圣妇塔玛拉（格鲁吉亚之王后，1213年）</string>
 	<key>St Joseph of Arimathea, and Nicodemus</key>
-	<string>St Joseph of Arimathea, and Nicodemus</string>
+	<string>義人亞利馬特的約瑟及尼科底姆</string>
 	<key>Radonitsa (Day of Rejoycing)</key>
-	<string>Radonitsa (Day of Rejoycing)</string>
+	<string>喜樂日。紀念亡者</string>
 	<key>Feast of the Life-Giving Spring of the Mother of God</key>
-	<string>Feast of the Life-Giving Spring of the Mother of God</string>
+	<string>「施生命之泉」聖母像</string>
 	<key>Venerable Mary of Egypt</key>
 	<string>埃及的大成德者圣女玛利亚</string>
 	<key>Saturday of the Akathist; Laudation of the Most Holy Theotokos</key>
@@ -95,7 +95,7 @@
 	<key>Great Martyr Theodore the Recruit († c. 306)</key>
 	<string>纪念殉道者新兵德奥多若; 大殉道者新兵德奥多若（306年）</string>
 	<key>Commemoration of all the saints, who showed forth in asceticism</key>
-	<string>Commemoration of all the saints, who showed forth in asceticism</string>
+	<string>所有於修行中顯耀之修道聖教父</string>
 	<key>Apodosis of the Meeting of the Lord</key>
 	<string>主进殿节庆期圆满日</string>
 	<key>Afterfeast of the Meeting of the Lord</key>
