--- a/prayerbook/trans_cal_cn.plist
+++ b/prayerbook/trans_cal_cn.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Demetrius Saturday: Commemoration of the Departed</key>
+	<string>圣迪弥特里节前安息日：纪念亡者之安息日</string>
 	<key>Apodosis of the Annunciation</key>
 	<string>诞神女福音节庆期圆满日</string>
 	<key>Forefeast of the Annunciation</key>
